# optio

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  roadmap.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ClientOnboarding.tsx  Dashboard.tsx  GRCCommandCenter.tsx  Header.tsx  InfrastructureMigration.tsx  NetworkIntelligence.tsx  ReportingCenter.tsx  Sidebar.tsx  index.ts
frontend/src/hooks/: index.ts
frontend/src/lib/: commands.ts  utils.ts
frontend/src/types/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: clients.rs  factory.rs  grc.rs  infrastructure.rs  mod.rs  network.rs  reporting.rs  system.rs
src-tauri/src/factory/: mod.rs
src-tauri/src/grc/: frameworks.rs  mod.rs  models.rs  repository.rs
src-tauri/src/infrastructure/: cloud_readiness.rs  finops.rs  k8s_hardening.rs  mod.rs  models.rs
src-tauri/src/network/: inventory.rs  mod.rs  models.rs  scanner.rs
src-tauri/src/reporting/: generator.rs  mod.rs  models.rs  pdf_generator.rs  report_styles.css  templates.rs
